# fedimint-tauri-SDK

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json  shell.nix  tauri.conf.json
src/: App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  rpc.rs
ui/: index.html
ui/vite-js/: package.json  pnpm-lock.yaml  vite.config.js
