[package]
name = "fedimint-tauri"
edition = "2024"
version = "0.0.1-alpha"
authors = ["The Fedimint Developers"]
description = "fedimint tauri app"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
base64 = "0.22.1"
fedimint-api-client = { path = "../fedimint/fedimint-api-client" }
fedimint-bip39 = { path = "../fedimint/fedimint-bip39" }
fedimint-client = { path = "../fedimint/fedimint-client" }
fedimint-core = { path = "../fedimint/fedimint-core" }
fedimint-derive-secret = { path = "../fedimint/crypto/derive-secret" }
fedimint-ln-client = { path = "../fedimint/modules/fedimint-ln-client" }
fedimint-mint-client = { path = "../fedimint/modules/fedimint-mint-client" }
fedimint-wallet-client = { path = "../fedimint/modules/fedimint-wallet-client" }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.0.0", features = [] }
thiserror = "2.0.12"
tokio = { version= "1.44.2", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
